crates/dioform/tests/derive_contract/fail/unit_struct.rs
#![allow(dead_code)]

use dioform::Form;

#[derive(Form)]
struct UnitForm;

fn main() {}
